layout issues

--- a/branches/groupoffice-5.0/www/views/Extjs3/themes/Default/style.css
+++ b/branches/groupoffice-5.0/www/views/Extjs3/themes/Default/style.css
@@ -836,6 +836,7 @@ hr{
 
 table.display-panel{
 	width:100%;
+	border-collapse:collapse;
 }
 
 table.display-panel td{
