--- a/branches/groupoffice-5.0/www/views/Extjs3/themes/Group-Office/style.css
+++ b/branches/groupoffice-5.0/www/views/Extjs3/themes/Group-Office/style.css
@@ -829,6 +829,7 @@ hr{
 
 table.display-panel{
 	width:100%;
+	border-collapse:collapse;
 }
 
 table.display-panel td{
@@ -854,7 +855,7 @@ table.display-panel a:active
 	padding-top: 10px;
 }
 .collapsible-display-panel-header{
-	padding:2px 0px 0px 0px;
+	padding:10px 0px 0px 0px;
 }
 
 .collapsible-display-panel-subheader {
@@ -2216,3 +2217,15 @@ body.ext-ie6 .x-superboxselect-item {margin: 2px 1px 2px 1px; line-height: 1.2em
 #go-links-panel .x-toolbar{
 	padding-bottom:10px !important;
 }
+
+
+
+
+
+
+
+
+
+
+
+
